--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 .DS_Store
+
+Thumbs.db
+.gradle
+build/
+target/
+out/
+.micronaut/
+.idea
+*.iml
+*.ipr
+*.iws
+.project
+.settings
+.classpath
+.factorypath
