PS-784: Medications Sharing
* Formatting and renaming

--- a/patient-appointment-api-1.1.0.yml
+++ b/patient-appointment-api-1.1.0.yml
@@ -499,6 +499,8 @@ components:
             - description: Directives which may influence how the data is processed
             - $ref: '#/components/schemas/Directives'
             - description: Directives which may influence how the data is processed
+            - $ref: '#/components/schemas/Directives'
+            - description: Directives which may influence how the data is processed
   securitySchemes:
     apiKey:
       type: apiKey
